--- a/PF-2/exercises/ProblemSet1.ipynb
+++ b/PF-2/exercises/ProblemSet1.ipynb
@@ -278,17 +278,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala",
+   "display_name": "Scala 2.13",
    "language": "scala",
-   "name": "scala"
+   "name": "scala213"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.13.0"
+   "version": "2.13.3"
   }
  },
  "nbformat": 4,
