Live coding session 2 - Móstoles

--- a/PF-1/PF-1.1.ipynb
+++ b/PF-1/PF-1.1.ipynb
@@ -1974,9 +1974,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala",
+   "display_name": "Scala 2.13",
    "language": "scala",
-   "name": "scala"
+   "name": "scala213"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
