Live session 3, Móstoles

--- a/PF-2/exercises/ProblemSet1.ipynb
+++ b/PF-2/exercises/ProblemSet1.ipynb
@@ -49,15 +49,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36mscala.math._\n",
+       "\n",
+       "\u001b[39m\n",
+       "defined \u001b[32mobject\u001b[39m \u001b[36mFunctionValuesNoSugar\u001b[39m"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import scala.math._\n",
     "\n",
     "object FunctionValuesNoSugar{\n",
     "    \n",
     "    // object circleArea ...\n",
+    "    val circleArea: Function1[Double, Double] = \n",
+    "        new Function1[Double, Double]{\n",
+    "            def apply(radius: Double): Double = \n",
+    "                Pi*pow(radius, 2)\n",
+    "        }\n",
     "    \n",
     "    // object triangleArea ...\n",
     "    \n",
@@ -87,15 +106,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def add(x: Int, y: Int) => Int = \n",
+    "    ???\n",
+    "\n",
+    "val addV: (Int, Int) => Int = \n",
+    "    ???\n",
+    "\n",
+    "val addVC: Int => Int => Int = \n",
+    "    ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36mscala.math._\n",
+       "\n",
+       "\u001b[39m\n",
+       "defined \u001b[32mobject\u001b[39m \u001b[36mFunctionValuesSugar\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "import scala.math._\n",
     "\n",
     "object FunctionValuesSugar{\n",
     "    \n",
-    "    // val circleArea: ??? => ??? = ???\n",
+    "    //val circleArea: ??? => ??? = ???\n",
     "            \n",
     "    // val triangleArea: ??? => ??? = ???\n",
     "        \n",
     "    // val rectangleArea = ???\n",
+    "    val rectangleArea: (Double, Double) => Double = \n",
+    "        // ??? : (Double, Double) => Double\n",
+    "        (width: Double,height: Double) => \n",
+    "           width * height : Double\n",
     "    \n",
     "    // val trapezoidArea: ??? = ???\n",
     "}"
@@ -117,9 +170,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36mscala.math._\n",
+       "\n",
+       "\u001b[39m\n",
+       "defined \u001b[32mobject\u001b[39m \u001b[36mFunctionValuesCurrified\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import scala.math._\n",
     "\n",
@@ -130,6 +197,12 @@
     "    // val triangleArea = ...\n",
     "    \n",
     "    // val rectangleArea = ...\n",
+    "    val rectangleArea: Double => (Double => Double) = \n",
+    "        // (width: Double) => ??? : (Double => Double)\n",
+    "        // (width: Double) => (height: Double) => ??? : Double\n",
+    "        (width: Double) => \n",
+    "            (height: Double) => \n",
+    "                width * (??? : Double) : Double\n",
     "    \n",
     "    // val trapezoid = ...\n",
     "}"
@@ -278,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala 2.13",
+   "display_name": "Scala (2.13)",
    "language": "scala",
    "name": "scala213"
   },
