--- a/PF-2/templates/2.1.1-Functions.ipynb
+++ b/PF-2/templates/2.1.1-Functions.ipynb
@@ -1293,11 +1293,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misEvenLength\u001b[39m"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// isEvenLength\n"
+    "// isEvenLength\n",
+    "def isEvenLength(s: String): Boolean = \n",
+    "    s.length % 2 == 0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres2_0\u001b[39m: \u001b[32mBoolean\u001b[39m = true\n",
+       "\u001b[36mres2_1\u001b[39m: \u001b[32mBoolean\u001b[39m = false"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isEvenLength(\"abcd\")\n",
+    "isEvenLength(\"abc\")"
    ]
   },
   {
@@ -1309,20 +1344,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mlength\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// length \n"
+    "// length \n",
+    "def length(s: String): Int = \n",
+    "    s.length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36misEven\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// isEven\n"
+    "// isEven\n",
+    "def isEven(i: Int): Boolean = \n",
+    "    i % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36misEven\u001b[39m: \u001b[32mInt\u001b[39m => \u001b[32mBoolean\u001b[39m = ammonite.$sess.cmd9$Helper$$Lambda$1982/0x000000080154e040@5de03a68"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// isEven\n",
+    "val isEven: Int => Boolean = \n",
+    "    i => i % 2 == 0"
    ]
   },
   {
@@ -1334,11 +1417,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// compose HOF\n"
+    "// compose HOF\n",
+    "def compose(g: Int => Boolean, \n",
+    "            f: String => Int): String => Boolean =\n",
+    "    (s: String) => g(f(s)) : Boolean"
    ]
   },
   {
@@ -1350,11 +1447,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36misEvenLength\u001b[39m: \u001b[32mString\u001b[39m => \u001b[32mBoolean\u001b[39m = ammonite.$sess.cmd5$Helper$$Lambda$1967/0x0000000801544840@762568f1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val isEvenLength: String => Boolean =\n",
+    "    compose(isEven, length)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres7\u001b[39m: \u001b[32mBoolean\u001b[39m = true"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// val isEvenLength: String => Boolean = ???"
+    "isEvenLength(\"abcd\")"
    ]
   },
   {
@@ -1366,11 +1495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36misEvenLength\u001b[39m: \u001b[32mString\u001b[39m => \u001b[32mBoolean\u001b[39m = scala.Function1$$Lambda$1978/0x000000080154b840@7ef495d8"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// val isEvenLength: String => Boolean = ???"
+    "val isEvenLength: String => Boolean =\n",
+    "    isEven.compose(length)"
    ]
   },
   {
@@ -1382,11 +1523,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36misEvenLength\u001b[39m: \u001b[32mString\u001b[39m => \u001b[32mBoolean\u001b[39m = scala.Function1$$Lambda$1978/0x000000080154b840@954c33"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// val isEvenLength: String => Boolean = ???"
+    "val isEvenLength: String => Boolean =\n",
+    "    isEven compose length"
    ]
   },
   {
@@ -1398,11 +1551,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36misEvenLength\u001b[39m: \u001b[32mString\u001b[39m => \u001b[32mBoolean\u001b[39m = scala.Function1$$Lambda$340/0x0000000800e9c040@22f7136e"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// val isEvenLength: String => Boolean = ???"
+    "val isEvenLength: String => Boolean =\n",
+    "    (length _) andThen isEven"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36misEvenLength\u001b[39m: \u001b[32mString\u001b[39m => \u001b[32mBoolean\u001b[39m = scala.Function1$$Lambda$340/0x0000000800e9c040@4e7126c5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val isEvenLength: String => Boolean =\n",
+    "    ((s: String) => s.length) andThen ((i: Int) => i%2 == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36misEvenLength\u001b[39m: \u001b[32mString\u001b[39m => \u001b[32mBoolean\u001b[39m = scala.Function1$$Lambda$340/0x0000000800e9c040@b871cbb"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val isEvenLength: String => Boolean =\n",
+    "    ((_: String).length) andThen (_%2 == 0)"
    ]
   },
   {
@@ -1414,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1423,14 +1630,125 @@
        "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def compose(f2: Int => Boolean, f1: String => Int): String => Boolean = \n",
-    "    (a: String) => f2(f1(a))"
+    "def compose[A,B,C](f2: B => C,\n",
+    "                   f1: A => B): A => C = \n",
+    "    ??? : (A => C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compose[A,B,C](f2: B => C,\n",
+    "                   f1: A => B): A => C = \n",
+    "    ((a: A) => ??? : C) : (A => C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compose[A,B,C](f2: B => C,\n",
+    "                   f1: A => B): A => C = \n",
+    "    ((a: A) => f2(??? : B)  : C) : (A => C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compose[A,B,C](f2: B => C,\n",
+    "                   f1: A => B): A => C = \n",
+    "    ((a: A) => f2(f1(??? : A) : B)  : C) : (A => C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compose[A,B,C](f2: B => C,\n",
+    "                   f1: A => B): A => C = \n",
+    "    ((a: A) => f2(f1(a : A) : B)  : C) : (A => C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compose[A,B,C](f2: B => C,\n",
+    "                   f1: A => B): A => C = \n",
+    "    (a: A) => f2(f1(a))"
    ]
   },
   {
@@ -1442,11 +1760,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36madd\u001b[39m\n",
+       "\u001b[36maddV\u001b[39m: (\u001b[32mInt\u001b[39m, \u001b[32mInt\u001b[39m) => \u001b[32mInt\u001b[39m = ammonite.$sess.cmd28$Helper$$Lambda$2050/0x000000080157d040@598d7030\n",
+       "\u001b[36maddVC\u001b[39m: \u001b[32mInt\u001b[39m => \u001b[32mInt\u001b[39m => \u001b[32mInt\u001b[39m = ammonite.$sess.cmd28$Helper$$Lambda$2051/0x000000080157e040@54165765"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(x: Int, y: Int): Int = \n",
+    "    x+y\n",
+    "\n",
+    "val addV: (Int, Int) => Int = \n",
+    "    (x,y) => x+y\n",
+    "\n",
+    "val addVC: Int => (Int => Int) = \n",
+    "    x => y => x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// compose currified\n"
+    "// compose as a function-2 value\n",
+    "def compose[A,B,C]: (B => C, A => B) => (A => C) = \n",
+    "    (f2, f1) => (a: A) => f2(f1(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcompose\u001b[39m"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// compose as a currified function\n",
+    "def compose[A,B,C]: (B => C) => (A => B) => (A => C) = \n",
+    "    f2 => f1 => (a: A) => f2(f1(a))"
    ]
   },
   {
@@ -1464,7 +1860,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// function-method identity\n"
+    "// function-method identity\n",
+    "def identity[A]: A => A = \n",
+    "    ??? : (A => A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// function-method identity\n",
+    "def identity[A]: A => A = \n",
+    "    ((a: A) => ??? : A ) : (A => A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// function-method identity\n",
+    "def identity[A]: A => A = \n",
+    "    ((a: A) => a : A ) : (A => A)"
    ]
   },
   {
@@ -1611,11 +2031,11 @@
    ],
    "source": [
     "object Std{\n",
-    "    trait Function1[A, B]{\n",
+    "    abstract class Function1[A, B]{\n",
     "        def apply(a: A): B\n",
     "    }\n",
     "\n",
-    "    trait Function2[A, B, C]{\n",
+    "    abstract class Function2[A, B, C]{\n",
     "        def apply(a: A, b: B): C\n",
     "    }\n",
     "\n",
@@ -1632,11 +2052,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36madd\u001b[39m: (\u001b[32mInt\u001b[39m, \u001b[32mInt\u001b[39m) => \u001b[32mInt\u001b[39m = ammonite.$sess.cmd31$Helper$$Lambda$2060/0x0000000801583840@49629ef5"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// addOneV as a Function1 instance\n"
+    "// addOneV as a Function1 instance\n",
+    "val add: (Int, Int) => Int = \n",
+    "    (x,y) => x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36madd\u001b[39m: (\u001b[32mInt\u001b[39m, \u001b[32mInt\u001b[39m) => \u001b[32mInt\u001b[39m = ammonite.$sess.cmd31$Helper$$Lambda$2060/0x0000000801583840@49629ef5"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// addOneV as a Function1 instance\n",
+    "val add: Function2[Int, Int, Int] = \n",
+    "    new Function2[Int, Int, Int]{\n",
+    "        def apply(x: Int, y: Int): Int = \n",
+    "            x+y\n",
+    "    }\n",
+    "// (x,y) => x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36madd\u001b[39m: (\u001b[32mInt\u001b[39m, \u001b[32mInt\u001b[39m) => \u001b[32mInt\u001b[39m = ammonite.$sess.cmd31$Helper$$Lambda$2060/0x0000000801583840@49629ef5"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// addOneV as a Function1 instance\n",
+    "object add extends Function2[Int, Int, Int] = \n",
+    "    new Function2[Int, Int, Int]{\n",
+    "        def apply(x: Int, y: Int): Int = \n",
+    "            x+y\n",
+    "    }\n",
+    "// (x,y) => x+y"
    ]
   },
   {
@@ -1681,7 +2166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala 2.13",
+   "display_name": "Scala (2.13)",
    "language": "scala",
    "name": "scala213"
   },
