live coding session 5 - Vicálvaro

--- a/PF-2/exercises/ProblemSet2.ipynb
+++ b/PF-2/exercises/ProblemSet2.ipynb
@@ -65,6 +65,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres1_0\u001b[39m: \u001b[32mOption\u001b[39m[\u001b[32mBoolean\u001b[39m] = \u001b[32mNone\u001b[39m\n",
+       "\u001b[36mres1_1\u001b[39m: \u001b[32mOption\u001b[39m[\u001b[32mBoolean\u001b[39m] = \u001b[33mSome\u001b[39m(false)\n",
+       "\u001b[36mres1_2\u001b[39m: \u001b[32mOption\u001b[39m[\u001b[32mBoolean\u001b[39m] = \u001b[33mSome\u001b[39m(true)\n",
+       "\u001b[36mres1_3\u001b[39m: \u001b[32mEither\u001b[39m[\u001b[32mBoolean\u001b[39m, \u001b[32mUnit\u001b[39m] = \u001b[33mLeft\u001b[39m(false)\n",
+       "\u001b[36mres1_4\u001b[39m: \u001b[32mEither\u001b[39m[\u001b[32mBoolean\u001b[39m, \u001b[32mUnit\u001b[39m] = \u001b[33mLeft\u001b[39m(true)\n",
+       "\u001b[36mres1_5\u001b[39m: \u001b[32mEither\u001b[39m[\u001b[32mBoolean\u001b[39m, \u001b[32mUnit\u001b[39m] = \u001b[33mRight\u001b[39m(())"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "None : Option[Boolean]\n",
+    "Some(false : Boolean) : Option[Boolean]\n",
+    "Some(true : Boolean) : Option[Boolean]\n",
+    "\n",
+    "to(from(Left(false : Boolean))) == Left(false : Boolean)\n",
+    ": Either[Boolean, Unit]\n",
+    "Left(true : Boolean) : Either[Boolean, Unit]\n",
+    "Right(() : Unit) : Either[Boolean, Unit]\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,6 +129,15 @@
    "metadata": {},
    "source": [
     "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1 -> ??? : Boolean , 2 -> ??? : Boolean , 3 -> ??? : Boolean "
    ]
   },
   {
@@ -172,12 +214,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def curry[X, Y, Z](f: (X, Y) => Z): X => Y => Z = \n",
-    "    ???"
+    "def curry[X, Y, Z](f: ((X, Y)) => Z): Y => (X => Z) = \n",
+    "    ??? : (Y => (X => Z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def curry[X, Y, Z](f: ((X, Y)) => Z): Y => (X => Z) = \n",
+    "    (y: Y) => ??? : (X => Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def curry[X, Y, Z](f: ((X, Y)) => Z): Y => (X => Z) = \n",
+    "    (y: Y) => (x : X) => ??? : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def curry[X, Y, Z](f: ((X, Y)) => Z): Y => (X => Z) = \n",
+    "    (y: Y) => (x : X) => f(??? : (X, Y)) : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def curry[X, Y, Z](f: ((X, Y)) => Z): Y => (X => Z) = \n",
+    "    (y: Y) => (x : X) => f((??? : X, ??? : Y)) : Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mcurry\u001b[39m"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def curry[X, Y, Z](f: ((X, Y)) => Z): Y => (X => Z) = \n",
+    "    (y: Y) => (x : X) => f((x : X, y : Y)) : Z"
    ]
   },
   {
@@ -186,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def uncurry[X, Y, Z](f: X => Y => Z): (X, Y) => Z = \n",
+    "def uncurry[X, Y, Z](f: Y => (X => Z)): (X, Y) => Z = \n",
     "    ???"
    ]
   },
