--- a/PF-2/templates/2.1.2-DataTypes.ipynb
+++ b/PF-2/templates/2.1.2-DataTypes.ipynb
@@ -1448,12 +1448,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoo\u001b[39m"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def foo(s: Either[Either[Int, String], (Int, Either[String, Boolean])]): Boolean = \n",
-    "    ???"
+    "// (Int + String) + Int * (String + Boolean)\n",
+    "// Int + String + Int*String + Int*Boolean\n",
+    "\n",
+    "def foo(s: Either[Either[Int, String], \n",
+    "                  (Int, Either[String, Boolean])]): Int = \n",
+    "    s match {\n",
+    "        case Left(a: Either[Int, String]) =>\n",
+    "            a match {\n",
+    "                case Left(i: Int) => 1\n",
+    "                case Right(s: String) => 2\n",
+    "            }\n",
+    "        case Right(t: (Int, Either[String, Boolean])) =>\n",
+    "            t._2 match {\n",
+    "                case Left(s: String) => 3\n",
+    "                case Right(b: Boolean) => 4\n",
+    "            }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mres4\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m4\u001b[39m"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(Right((0 : Int, Right(true : Boolean) : Either[String, Boolean])))"
    ]
   },
   {
@@ -1465,12 +1511,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoo\u001b[39m"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def foo(s: Either[Either[Int, String], (Int, Either[String, Boolean])]): Boolean = \n",
-    "    ???"
+    "def foo(s: Either[Either[Int, String], (Int, Either[String, Boolean])]): Int = \n",
+    "    s match {\n",
+    "        case Left(Left(i: Int)) => 1\n",
+    "        case Left(Right(s: String)) => 2\n",
+    "        case Right((i: Int, Left(s: String))) => 3\n",
+    "        case Right((i: Int, Right(b: Boolean))) => 4\n",
+    "    }"
    ]
   },
   {
@@ -1485,6 +1547,78 @@
    "metadata": {},
    "source": [
     "More details on pattern matching in Scala can be found [here](https://docs.scala-lang.org/tour/pattern-matching.html). Also, note that we can create custom pattern matching expressions using so-called [_extractors_](https://docs.scala-lang.org/tour/extractor-objects.html). We won't need them in the course, but they can be really helpful to simplifiy and get more understandable pattern matching expressions. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfoo\u001b[39m"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def foo(s: Either[Int, String]): Boolean = \n",
+    "    s match {\n",
+    "        case Left(i) => true\n",
+    "        case Right(s) => false\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mfoo\u001b[39m: \u001b[32mEither\u001b[39m[\u001b[32mInt\u001b[39m, \u001b[32mString\u001b[39m] => \u001b[32mBoolean\u001b[39m = ammonite.$sess.cmd7$Helper$$Lambda$2042/0x0000000801570840@18e2107a"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val foo: Either[Int, String] => Boolean = \n",
+    "    (s: Either[Int, String]) => s match {\n",
+    "        case Left(i) => true\n",
+    "        case Right(s) => false\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mfoo\u001b[39m: \u001b[32mEither\u001b[39m[\u001b[32mInt\u001b[39m, \u001b[32mString\u001b[39m] => \u001b[32mBoolean\u001b[39m = ammonite.$sess.cmd9$Helper$$Lambda$2060/0x000000080157b840@2dafb6e1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val foo: Either[Int, String] => Boolean = \n",
+    "    {\n",
+    "        case Left(i) => true\n",
+    "        case Right(s) => false\n",
+    "    }"
    ]
   },
   {
@@ -1507,8 +1641,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// false -> false, true -> false\n",
-    "// ..."
+    "// false -> false : Boolean, true -> false : Boolean\n",
+    "// false -> false : Boolean, true -> true : Boolean\n",
+    "// false -> true : Boolean, true -> true : Boolean\n",
+    "// false -> true : Boolean, true -> false : Boolean\n",
+    "\n"
    ]
   },
   {
@@ -1551,7 +1688,7 @@
     "0 \\Rightarrow X & \\cong & 1 \\\\\n",
     "X \\Rightarrow 1 & \\cong & 1 \\\\\n",
     "1 \\Rightarrow X & \\cong & X \\\\\n",
-    "(X+Y) \\Rightarrow Z & \\cong & (X \\Rightarrow Z) * (Y \\Rightarrow Z) \\\\\n",
+    "(X+Y) \\Rightarrow Z & \\cong & (X \\Rightarrow Z, Y \\Rightarrow Z) \\\\\n",
     "(X*Y) \\Rightarrow Z & \\cong & X \\Rightarrow (Y \\Rightarrow Z) \\\\\n",
     "X \\Rightarrow Y*Z & \\cong & (X \\Rightarrow Y)*(X \\Rightarrow Z) \\\\\n",
     "\\end{array}\n",
@@ -1642,20 +1779,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mfrom\u001b[39m"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// from\n"
+    "// from\n",
+    "def from[X, Y, Z](f: Either[Y, Z] => X): (Y => X, Z => X) = \n",
+    "    ((y : Y) => f(Left(y : Y) : Either[Y, Z]) : X,\n",
+    "     (z : Z) => f(Right(z : Z) : Either[Y, Z]) : X)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "// to"
+    "// to\n",
+    "def to[X, Y, Z](t: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    ??? : (Either[Y, Z] => X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// to\n",
+    "def to[X, Y, Z](t: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e : Either[Y, Z]) => \n",
+    "        ??? : X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// to\n",
+    "def to[X, Y, Z](t: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e : Either[Y, Z]) => \n",
+    "        e match {\n",
+    "            case Left(y: Y) => \n",
+    "                ??? : X\n",
+    "            case Right(z: Z) => \n",
+    "                ??? : X\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// to\n",
+    "def to[X, Y, Z](t: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e : Either[Y, Z]) => \n",
+    "        e match {\n",
+    "            case Left(y: Y) => \n",
+    "                t._1(y : Y) : X\n",
+    "            case Right(z: Z) => \n",
+    "                t._2(??? : Z) : X\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001b[32mfunction\u001b[39m \u001b[36mto\u001b[39m"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// to\n",
+    "def to[X, Y, Z](t: (Y => X, Z => X)): Either[Y, Z] => X = \n",
+    "    (e : Either[Y, Z]) => \n",
+    "        e match {\n",
+    "            case Left(y: Y) => \n",
+    "                t._1(y : Y) : X\n",
+    "            case Right(z: Z) => \n",
+    "                t._2(z : Z) : X\n",
+    "        }"
    ]
   },
   {
